# zstd

./: .travis.yml  CMakeLists.txt
lib/: zstd.hpp
lib/decompress/: zstd_decompress.c
